--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,47 @@ nc{
 .bodybgcolor{
     background-color: #0D1321;
 }
+
+.navbar-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.navbar-nav .nav-item {
+    transition: transform 0.3s ease;
+    flex: 1;
+    text-align: center;
+}
+
+.navbar-nav .nav-link {
+    color: #F0E5CF;
+    transition: color 0.2s ease, transform 0.2s ease;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #E43F5A;
+    transform: scale(1.5);
+}
+
+.navbar-nav .nav-item:hover .nav-link {
+    transform: scale(2);
+}
+
+.navbar-nav .nav-item:hover ~ .nav-item .nav-link,
+.navbar-nav .nav-item:hover + .nav-item .nav-link {
+    transform: scale(1.1);
+}
+
+.navbar-nav .nav-link {
+    color: #F0E5CF;
+    position: relative;
+    transition: color 0.2s ease, transform 0.2s ease;
+}
+
+.navbar-nav .nav-link:hover {
+    color: #E43F5A;
+    transform: scale(1.2);
+    text-shadow: 0 0 10px #E43F5A, 0 0 20px #E43F5A, 0 0 30px #E43F5A, 0 0 40px #E43F5A;
+}
