--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,27 @@
-.navBarbg{
-    background-color: #3a3f44;
-}
-
-nc{
-    color: #f05871;
-}
-
 .bodybgcolor{
     background-color: #0D1321;
 }
 
-.navbar-nav {
+.navbar-nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 40px;
+    white-space: nowrap;
 }
 
-.navbar-nav .nav-item {
+.navbar-nav .nav-item{
     transition: transform 0.3s ease;
     flex: 1;
     text-align: center;
 }
 
-.navbar-nav .nav-link {
-    color: #F0E5CF;
+.navbar-nav .nav-link{
+    color: crimson;
     transition: color 0.2s ease, transform 0.2s ease;
 }
-
-.navbar-nav .nav-link:hover {
-    color: #E43F5A;
+.navbar-nav .nav-link:hover{
+    color: rgb(197, 71, 96);
     transform: scale(1.5);
-}
-
-.navbar-nav .nav-item:hover .nav-link {
-    transform: scale(2);
-}
-
-.navbar-nav .nav-item:hover ~ .nav-item .nav-link,
-.navbar-nav .nav-item:hover + .nav-item .nav-link {
-    transform: scale(1.1);
-}
-
-.navbar-nav .nav-link {
-    color: #F0E5CF;
-    position: relative;
-    transition: color 0.2s ease, transform 0.2s ease;
-}
-
-.navbar-nav .nav-link:hover {
-    color: #E43F5A;
-    transform: scale(1.2);
     text-shadow: 0 0 10px #E43F5A, 0 0 20px #E43F5A, 0 0 30px #E43F5A, 0 0 40px #E43F5A;
 }
