final footer design

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-.bodybgcolor{
-    background-color: #0D1321;
-}
-
 .navbar-nav{
     display: flex;
     justify-content: center;
@@ -17,11 +13,11 @@
 }
 
 .navbar-nav .nav-link{
-    color: crimson;
+    color: rgb(226, 30, 69);
     transition: color 0.2s ease, transform 0.2s ease;
 }
 .navbar-nav .nav-link:hover{
-    color: rgb(197, 71, 96);
+    color: rgb(230, 106, 131);
     transform: scale(1.5);
     text-shadow: 0 0 10px #E43F5A, 0 0 20px #E43F5A, 0 0 30px #E43F5A, 0 0 40px #E43F5A;
 }
@@ -31,10 +27,9 @@
 }
 
 .footer{
-    background-color: #0D1321;
+    background-color: #333333;
     color: white;
     text-align: center;
-    padding: 20px;
 }
 
 .content {
